# houdini

./: .dockerignore  CITATION.cff  Cargo.toml  Dockerfile  Makefile  README.md  notes.txt
.github/: dependabot.yaml
.github/actions-rs/: grcov.yml
.github/workflows/: check-and-lint.yaml  test.yaml
docs/img/: exploit-coverage.drawio  houdini-e2e.drawio
exploits/: mounted-docker-socket.yaml  write-etc-passwd-vm.yaml  write-etc-passwd.yaml
rootfs/: Dockerfile
src/: api.rs  cli.rs  config.rs  docker.rs  exploits.rs  host.rs  lib.rs  logging.rs  serde_defaults.rs  subcommands.rs  testutils.rs  tricks.rs  vm.rs
src/api/: client.rs  middleware.rs  uds.rs  vsock.rs
src/config/: defaults.toml
src/docker/: cmd.rs  container.rs  image.rs  util.rs
src/exploits/: container.rs  host.rs  report.rs  version.rs
src/exploits/container/: mounted_docker_socket.rs
src/guest/: image.rs
src/tricks/: environment.rs  guest.rs  report.rs  steps.rs
src/tricks/steps/: command.rs  container.rs  environment.rs  host.rs  version.rs  wait.rs
testdata/imgbuild/: .dockerignore
tests/: Dockerfile.victim  Makefile
