# SPDX-License-Identifier: Apache-2.0
#
# Houdini  A container escape artist
# Copyright (c) 2022  William Findlay
#
# February 25, 2022  William Findlay  Created this.
#

[package]
name = "houdini"
version = "0.1.0"
edition = "2021"
authors = ["William Findlay <william@williamfindlay.com>"]
description = """A container escape artist"""

[[bin]]
name = "houdini"
path = "bin/houdini.rs"

[lib]
name = "houdini"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
atty = "0.2.14"
bollard = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.2.15"
clap_derive = "3.2.15"
config = { version = "0.13.1", features = ["toml"] }
directories = "4.0.1"
flate2 = "1.0.24"
futures = "0.3.21"
human-panic = "1.0.3"
humantime-serde = "1.1.1"
hyper = "0.14.20"
lazy_static = "1.4.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
nix = { version = "0.24.2", features = ["feature"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
shellexpand = "2.1.0"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "std", "json"] }
uuid = "1.1.2"
versions = { version = "4.1.0", features = ["serde"] }

[features]

[dev-dependencies]
serial_test = "0.8.0"
tracing-test = "0.2.3"
jwalk = "0.6.0"
