# SPDX-License-Identifier: Apache-2.0
#
# Houdini  A container escape artist
# Copyright (c) 2022  William Findlay
#
# February 25, 2022  William Findlay  Created this.
#

[package]
name = "houdini"
version = "0.1.0"
edition = "2021"
authors = ["William Findlay <william@williamfindlay.com>"]
description = """A container escape artist"""

[[bin]]
name = "houdini"
path = "bin/houdini.rs"

[lib]
name = "houdini"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.60"
async-trait = "0.1.57"
atty = "0.2.14"
axum = { version = "0.5.13", features = ["macros"] }
bollard = "0.13.0"
chrono = { version = "0.4.20", features = ["serde"] }
clap = "3.2.16"
clap_derive = "3.2.15"
config = { version = "0.13.2", features = ["toml"] }
directories = "4.0.1"
flate2 = "1.0.24"
futures = "0.3.21"
gitignore = "1.0.7"
human-panic = "1.0.3"
humantime-serde = "1.1.1"
hyper = "0.14.20"
hyperlocal = { version = "0.8.0", features = ["client"], default-features = false }
jwalk = "0.6.0"
lazy_static = "1.4.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
nix = { version = "0.24.2", features = ["feature"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.83"
serde_yaml = "0.8.26"
shellexpand = "2.1.2"
tar = "0.4.38"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tower = "0.4.13"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["fmt", "std", "json"] }
uuid = "1.1.2"
versions = { version = "4.1.0", features = ["serde"] }

[features]

[dev-dependencies]
serial_test = "0.8.0"
tracing-test = "0.2.3"
jwalk = "0.6.0"
tempfile = "3.3.0"
